<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Maquinaria Usada</string>
    <string name="hello_world">Hello world! Stefanie</string>
    <string name="action_settings">Configuración</string>
    <string name="action_logout">Cerrar sesión</string>

    <!--Login-->
    <string name="login">Iniciar Sesión</string>
    <string name="btnLogin">Acceder</string>
    <string name="chkOffline">Modo offline</string>
    <string name="lblUsuario">Usuario</string>
    <string name="lblContrasena">Contraseña</string>
    <string name="lblRegistrarse"><u>No tienes cuenta? Regístrate</u></string>

    <!--Main-->
    <string name="cotizaciones">Ver últimas cotizaciones</string>
    <string name="lblBusqueda">Ordenar por:</string>
    <string name="BusquedaGeneral">¿Qué deseas buscar?</string>
    <string-array name="orden">
        <item>Más recientes</item>
        <item>Precio: Menor a Mayor</item>
        <item>Precio: Mayor a Menor</item>
        <item>A-Z</item>
    </string-array>
    <string name="lblFamilia">Familia:</string>
    <string name="lblModelo">Modelo:</string>
    <string name="lblPrecio">Precio:</string>
    <string name="lblRegion">Ubicación:</string>
    <string name="lblUbicacion">Ubicación:</string>
    <string name="lblAnio">Año:</string>
    <string name="btnFiltrar">Filtrar</string>
    <string name="btnBorrarFiltros">Borrar filtros</string>
    <string name="lblVerPromos">Ver promociones</string>
    <string name="lblVerFiltros">Ver filtros de búsqueda</string>
    <string name="lblEquipos">.</string>
    <string name="lblSi">Si</string>
    <string name="lblNo">No</string>
    <string name="lblNoSerie">No. Serie:</string>

    <!--Listados filtros en Main-->
    <string-array name="Familias">
        <item></item>
        <item>Accesorios</item>
        <item>Camiones articulados</item>
        <item>Cargadoras</item>
        <item>Compactadoras</item>
        <item>Equipos agrícolas</item>
        <item>Equipos de trituración</item>
        <item>Excavadoras</item>
        <item>Generación de energía</item>
        <item>Grúas</item>
        <item>Manipuladores telescópicos</item>
        <item>Minicargadoras</item>
        <item>Miniexcavadoras</item>
        <item>Montacargas</item>
        <item>Motoniveladoras</item>
        <item>Motores</item>
        <item>Retroexcavadoras</item>
        <item>Tractores</item>
        <item>Varios</item>

    </string-array>

    <string-array name="Precios">
        <item></item>
        <item>Menor a 35.000</item>
        <item>35.000 a 50.000</item>
        <item>50.000 a 100.000</item>
        <item>100.000 en adelante</item>
    </string-array>
    <string-array name="Regiones">
        <item></item>
        <item>IIASA Guayaquil</item>
        <item>IIASA Quito</item>
        <item>IIASA Loja</item>
        <item>IIASA Coca</item>
        <item>IIASA Cuenca</item>
        <item>IIASA Manta</item>
        <item>IIASA Machala</item>
        <item>IIASA Portoviejo</item>
        <item>IIASA Santo Domingo</item>
        <item>Campamento del cliente</item>
    </string-array>


    <!--Activity registro-->
    <string name="lblRegistro_titulo">Registrate con tu Email</string>
    <string name="lblRegistro_nombre">Nombre</string>
    <string name="lblRegistro_email">Email</string>
    <string name="btnRegistroGuardar">REGISTRARSE</string>
    <!--Activity Anuncio Small-->
    <string name="lblHoras">Horas: 0</string>
    <string name="lblGarantia">Garantia: Sin garantia</string>

    <!--Activity Detalle anuncio-->
    <string name="BtnCotizar">Cotizar</string>
    <string name="lblPrecioCertificado">Precio CAT (Sin IVA)</string>
    <string name="lblDetalleDescripcion">Descripción:</string>
    <string name="lblDetalleHoras">Horas:</string>
    <string name="lblDetalleGarantia">Garantía:</string>
    <string name="lblBannerExistente">Cotización a cliente existente</string>
    <string name="lblBannerNuevo">Cotización a cliente nuevo</string>
    <string name="lblCliente">Buscar al cliente:</string>
    <string name="lblHintCliente">Busque por el nombre o código</string>
    <string name="lblIngresarCliente">Ingrese el nombre del cliente:</string>
    <string name="lblHintContacto">Ingrese el nombre del contacto a quien se dirige la cotización</string>
    <string name="lblIngresarInfluencer">Contacto:</string>
    <string name="BtnGenerarPDF">Generar PDF</string>

    <string name="lblNuevoCliente">Nombre del Cliente:</string>
    <string name="lblHintNuevoCliente">Ingrese nombre del cliente nuevo</string>
    <!--Email-->
    <string name="label_email">Enviar por email</string>
    <string name="label_preview">Vista previa</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_iva">12% IVA</string>

</resources>

