<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/usadas"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="61dp"
        android:id="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iconUsuario"
                android:src="@drawable/ic_usuario"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"/>
            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:ems="10"
                android:id="@+id/txtUsuario"
                android:hint="@string/lblUsuario"/>


         </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:id="@+id/iconPassword" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:ems="10"
                android:id="@+id/txtPassword"
                android:hint="@string/lblContrasena"/>

        </LinearLayout>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin"
            android:id="@+id/btnLogin"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="60dp"
            android:layout_gravity="left"
            style="@style/button"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/LoginText"
        android:textSize="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
